Fix: align dot bubble position on mobile

--- a/assets/stylesheets/layout/_masterbar.scss
+++ b/assets/stylesheets/layout/_masterbar.scss
@@ -148,11 +148,11 @@ $autobar-height: 20px;
 		height: 8px;
 		letter-spacing: 0;
 		line-height: 12px;
-		margin: 0;
+		margin: 0 0 0 -12px;
 		padding: 0;
 		position: absolute;
 			top: 9px;
-			left: 15px;
+			left: 50%;
 		width: 8px;
 		z-index: 99999;
 
